1135541078	Neue Versionsnummer: 0.2.1
1135541058	Neues Feature: Handelsfunktion – man kann sich nähernden Transporten Rohstoffe mit auf den Rückweg geben.
1135254021	Neue Versionsnummer: 0.2.0
1135254020	Flexiblere Unterstützung für mehrere Runden (Datenbanken).
1135254004	SSL wird nurnoch benutzt, wenn vertrauliche Daten wie Passwörter und Benutzernamen übertragen werden.
1135207942	Die Imperiumsübersicht gibt nun mehr Informationen über Auswirkungsgrade der Forschung.
1135184422	Neuer Flugzeitenalgorithmus.
1135173060	Neuer Datenbank-Locking-Mechanismus, das bisherige Problem sollte nun definitiv nicht mehr auftreten.
1135031913	In der Karte wird die Werbung nun ausgeblendet, falls man sie aktiviert hat.
1135019621	Neue Versionsnummer: 0.1.7
1135019618	Inaktive Benutzer werden nun automatisch gelöscht.
1134922174	Etwaig aktivierte externe Navigationslinks stehen nun ganz unten in der Navigation.
1134920504	Neues Feature: „Nachrichteninformierung“.
1134913981	Neue Versionsnummer: 0.1.6
1134913979	Das Herunterfahren des Eventhandlers wird nun sauber durchgeführt, das „Exclusive lock“-Problem sollte also nicht mehr auftreten.
1134912055	Neue Versionsnummer: 0.1.5
1134912054	Man kann Nachrichten nun archivieren, archivierte Nachrichten werden nicht automatisch nach einem bestimmen Zeitraum gelöscht.
1134906302	Die Standardskins wurden ummodelliert und funktionieren jetzt alle im Internet Explorer.
1134852860	Neue Versionsnummer: 0.1.4
1134852857	Es werden jetzt zwei separate Allianzhighscores für Gesamtpunkte und Punkteschnitt geführt.
1134846969	Die Highscores werden jetzt in Seiten à 100 Plätze eingeteilt.
1134838813	Bug behoben: Wenn man aus einer Allianz austrat, wurde die Allianz in der Karte und in den Highscores nicht entfernt.
1134789434	Bei veröffentlichten Kampfberichten werden jetzt die Koordinaten entfernt.
1134683887	Je inaktiver ein Benutzer ist, desto schwächer wirken seine Rohstoffe ab jetzt in den Handelskurs ein.