@@ -1,3 +1,4 @@
+1135609592	Beim Sammeln werden jetzt nur noch die Sammler mit Rohstoffen beladen.
 1135541078	Neue Versionsnummer: 0.2.1
 1135541058	Neues Feature: Handelsfunktion – man kann sich nähernden Transporten Rohstoffe mit auf den Rückweg geben.
 1135254021	Neue Versionsnummer: 0.2.0
